# Lr1.sem2

./: App.cpp  ArraySequence.h  CMakeLists.txt  DynamicArray.h  LinkedList.h  ListSequence.h  README.md  Sequence.h  tests.h
Sort/ISort/: ISort.cpp  ISort.h
Sort/Tests/: tests.cpp
interface/: App.h  Chartcontrol.h  Presenter.cpp
interface/ChartControl/: Chartcontrol.cpp
interface/MainFrame/: MainFrame.cpp  MainFrame.h
interface/Presenter/: Presenter.h
